--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 clap = { version = "3.1.6", features = ["derive"] }
 chrono = "0.4"
 shlex = "1.1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rpassword = "6.0"
+rand = "0.8.5"
