--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rpassword = "6.0"
 rand = "0.8.5"
+dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
+walkdir = "2.3.2"
+sublime_fuzzy = "0.7.0"
+indicatif = {version = "0.16.2", features = ["rayon"]}
+rayon = "1.5.3"
