--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,4 @@ rand = "0.8.5"
 dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
 walkdir = "2.3.2"
 sublime_fuzzy = "0.7.0"
-indicatif = {version = "0.16.2", features = ["rayon"]}
-rayon = "1.5.3"
+indicatif = "0.16.2"
