--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ shlex = "1.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8.5"
-dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
+dialoguer = { version = "0.10.0", features = ["history"] }
 walkdir = "2.3.2"
 sublime_fuzzy = "0.7.0"
 indicatif = "0.16.2"
