--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ indicatif = { version = "0.16.2", features = ["rayon"] }
 zeroize = "1.5.7"
 rayon = "1.5.3"
 colour = "0.6.0"
+reqwest = { version = "0.11.12", features = ["blocking"] }
+tempfile = "3.3.0"
