--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,12 @@
 name = "ctk"
 version = "0.4.0"
 edition = "2021"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.1.6", features = ["derive"] }
+clap = { version = "4.3.19", features = ["derive"] }
 chrono = "0.4"
 shlex = "1.1.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -20,3 +21,9 @@ zeroize = "1.5.7"
 rayon = "1.5.3"
 colour = "0.6.0"
 reqwest = { version = "0.11.12", features = ["blocking"] }
+ctk_common = { path = "./ctk_common" }
+
+[build-dependencies]
+clap_complete = "4.3.2"
+clap = { version = "4.3.19", features = ["derive"] }
+ctk_common = { path = "./ctk_common" }
